// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginListItem should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-y9j4av-0 hGTGw"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 hvhfUK space-x-5"
          >
            <div
              class="PluginImage__PluginImageWrapper-sc-10kztrf-0 eqtfYw"
              data-testid="PluginImage__placeholder"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center space-x-2 text-left"
            >
              <span
                class="flex items-center space-x-2 font-semibold link"
                data-testid="PluginListItem__link"
              >
                ARK Explorer
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <span>
              v1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <div
              class="flex justify-center items-center mx-auto w-6 h-6 text-theme-secondary-500"
              data-testid="PluginListItem__not-installed"
            >
              <div
                class="sc-bdfBwQ dnaihB"
                height="1em"
                width="1em"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 auIyS justify-end"
          >
            <button
              class="OriginalButton__StyledButton-o0fs2j-0 guPjPB flex-1"
              data-testid="PluginListItem__install"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Install
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should render grant icon 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-y9j4av-0 hGTGw"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 hvhfUK space-x-5"
          >
            <div
              class="PluginImage__PluginImageWrapper-sc-10kztrf-0 eqtfYw"
              data-testid="PluginImage__placeholder"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center space-x-2 text-left"
            >
              <span
                class="flex items-center space-x-2 font-semibold link"
                data-testid="PluginListItem__link"
              >
                ARK Explorer
              </span>
              <div
                class="sc-bdfBwQ iTdEjS"
                height="20"
                width="14"
              >
                <svg>
                  grant.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <span>
              v1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <div
              class="flex justify-center items-center mx-auto w-6 h-6 text-theme-secondary-500"
              data-testid="PluginListItem__not-installed"
            >
              <div
                class="sc-bdfBwQ dnaihB"
                height="1em"
                width="1em"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 auIyS justify-end"
          >
            <button
              class="OriginalButton__StyledButton-o0fs2j-0 guPjPB flex-1"
              data-testid="PluginListItem__install"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Install
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should render official icon 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-y9j4av-0 hGTGw"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 hvhfUK space-x-5"
          >
            <div
              class="PluginImage__PluginImageWrapper-sc-10kztrf-0 eqtfYw"
              data-testid="PluginImage__placeholder"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center space-x-2 text-left"
            >
              <span
                class="flex items-center space-x-2 font-semibold link"
                data-testid="PluginListItem__link"
              >
                ARK Explorer
              </span>
              <div
                class="sc-bdfBwQ hHLBkp"
                height="18"
                width="18"
              >
                <svg>
                  official-ark-plugin.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <span>
              v1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <div
              class="flex justify-center items-center mx-auto w-6 h-6 text-theme-secondary-500"
              data-testid="PluginListItem__not-installed"
            >
              <div
                class="sc-bdfBwQ dnaihB"
                height="1em"
                width="1em"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 auIyS justify-end"
          >
            <button
              class="OriginalButton__StyledButton-o0fs2j-0 guPjPB flex-1"
              data-testid="PluginListItem__install"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Install
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`PluginListItem should trigger install 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-y9j4av-0 hGTGw"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 hvhfUK space-x-5"
          >
            <div
              class="PluginImage__PluginImageWrapper-sc-10kztrf-0 eqtfYw"
              data-testid="PluginImage__placeholder"
            >
              <svg>
                plugin-logo-placeholder.svg
              </svg>
            </div>
            <div
              class="flex items-center space-x-2 text-left"
            >
              <span
                class="flex items-center space-x-2 font-semibold link"
                data-testid="PluginListItem__link"
              >
                ARK Explorer
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <span>
              ARK.io
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <span>
              v1.3.8
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <span>
              4.2 MB
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 fHHBzg"
          >
            <div
              class="flex justify-center items-center mx-auto w-6 h-6 text-theme-secondary-500"
              data-testid="PluginListItem__not-installed"
            >
              <div
                class="sc-bdfBwQ dnaihB"
                height="1em"
                width="1em"
              >
                <svg>
                  dash.svg
                </svg>
              </div>
            </div>
          </div>
        </td>
        <td
          class="w-16"
        >
          <div
            class="TableCell__TableCellInnerWrapper-v39gua-0 auIyS justify-end"
          >
            <button
              class="OriginalButton__StyledButton-o0fs2j-0 guPjPB flex-1"
              data-testid="PluginListItem__install"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Install
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
